[package]
name = "isogeny"
version = "0.1.0"
edition = "2024"

[dependencies]
fp2 = "=0.1.9"
rand = "0.9"
rand_core = "0.6"
sha3 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4.3"
sha2 = "0.10.2"
num-bigint = "0.4.3"
rayon = "1.10.0"

[features]
kat-tests = []

# [[bench]]
# name = "bench_sidh"
# path = "benches/bench_sidh.rs"
# harness = false

[[bench]]
name = "bench_sqisign_verification"
path = "benches/bench_sqisign_verification.rs"
harness = false

# [[bench]]
# name = "bench_product_isogeny"
# path = "benches/bench_product_isogeny.rs"
# harness = false

# [[bench]]
# name = "bench_biscalar_ladder"
# path = "benches/bench_biscalar_ladder.rs"
# harness = false
